--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -1935,7 +1935,8 @@ input[type="email"] {
      font-weight:600;   
     }
     .menu-wep a:hover{
-      border-bottom: 2px solid;   
+      /* border-bottom: 2px solid;    */
+      color: #e5e3ff;
     }
 
 
@@ -2146,7 +2147,7 @@ font-weight: 700;
 }
 
 .bottom-btn .btn-2 a:hover {
-  color: #000;
+  /* color: #000; */
   /*transition: all 0.5s ease-in-out;*/
 }
 
