--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -330,3 +330,23 @@ a.apps_btn,
 }
 
 
+/*Mradul CSS Start*/
+
+.main-card {
+    max-width: 70%;
+    margin: 5% auto;
+}
+
+.partners_img{
+  max-width: 100%;
+  max-height: 100%;
+  width: auto;
+  display: block;
+  margin: auto;
+}
+
+.partners_div{
+  padding: 50px 25px;
+  width: 200px;
+  height: 200px;
+}
